Fixed paths in polybar config

--- a/polybar/.config/polybar/modules.config
+++ b/polybar/.config/polybar/modules.config
@@ -304,7 +304,7 @@ label-mounted = %percentage_free%
 [module/github]
 type = internal/github
 
-token = ${file:tokens/github.token}
+token = ${file:~/.config/polybar/tokens/github.token}
 user = druskus20
 
 ; Whether empty notifications should be displayed or not
@@ -327,7 +327,7 @@ label-offline = offline
 [module/cmus]
 type = custom/script
 
-exec       = modules/cmus.sh
+exec       = ~/.config/polybar/modules/cmus.sh
 exec-if    = pgrep -x cmus
 interval   = 5
 format     = <label>
@@ -338,7 +338,7 @@ label      =  %output%
 [module/nvidia]
 type = custom/script
 
-exec     = modules/nvidia-smi.sh
+exec     = ~/.config/polybar/modules/nvidia-smi.sh
 interval = 3
 format   = <label>
 label    =  %output%
@@ -349,7 +349,7 @@ label    =  %output%
 [module/amdgpu]
 type = custom/script
 
-exec     = modules/amdgpu.sh
+exec     = ~/.config/polybar/modules/amdgpu.sh
 interval = 3
 format   = <label>
 label    =  %output%
@@ -360,7 +360,7 @@ label    =  %output%
 [module/spotify]
 type = custom/script
 
-exec     = modules/spotify.sh 
+exec     = ~/.config/polybar/modules/spotify.sh 
 interval = 5
 #tail     = true
 format  = <label>
@@ -371,7 +371,7 @@ label   =  %output%
 [module/network]
 type = custom/script
 
-exec     = modules/network.sh 
+exec     = ~/.config/polybar/modules/network.sh 
 interval = 10
 #tail     = true
 format  = <label>
@@ -381,7 +381,7 @@ label   =  %output%
 [module/updates]
 type = custom/script
 
-exec     = modules/arch-aur-updates.sh 
+exec     = ~/.config/polybar/modules/arch-aur-updates.sh 
 interval = 300
 #tail     = true
 format  =  <label>
@@ -391,7 +391,7 @@ label   = %output%
 [module/ping]
 type = custom/script
 
-exec     = modules/ping.sh
+exec     = ~/.config/polybar/modules/ping.sh
 interval = 15
 format  =  <label>
 label   = %output%
@@ -399,14 +399,14 @@ label   = %output%
 
 [module/host]
 type = custom/ipc
-hook-0 = modules/host.sh
+hook-0 = ~/.config/polybar/modules/host.sh
 initial = 1
 
 
 [module/noisetorch]
 type = custom/script
 
-exec     = modules/noisetorch.sh
+exec     = ~/.config/polybar/modules/noisetorch.sh
 interval = 60
 format  = <label>
 label   = %output%
@@ -415,8 +415,8 @@ label   = %output%
 # This is stoopid and I love it :P
 [module/trash]
 type = custom/ipc
-hook-0 = modules/trash.sh
-hook-1 = modules/trash.sh --clean &
+hook-0 = ~/.config/polybar/modules/trash.sh
+hook-1 = ~/.config/polybar/modules/trash.sh --clean &
 click-right = polybar-msg hook trash 2
 
 format =  <output>
