Custom gh-cli module

--- a/polybar/.config/polybar/modules.config
+++ b/polybar/.config/polybar/modules.config
@@ -301,23 +301,25 @@ label-mounted = %percentage_free%
 #format-unmounted-background = ${colors.blue}
 
 
-[module/github]
-type = internal/github
-
-token = ${file:~/.config/polybar/tokens/github.token}
-user = druskus20
-
-; Whether empty notifications should be displayed or not
-empty-notifications = true
-
-; Number of seconds in between requests
-interval = 60
-
-format =  <label>
-label = %notifications%
-
-format-offline =  <label-offline>
-label-offline = offline
+# [module/github]
+# type = internal/github
+# 
+# token = ${file:~/.config/polybar/tokens/github.token}
+# user = druskus20
+# 
+# ; Whether empty notifications should be displayed or not
+# empty-notifications = true
+# 
+# ; Number of seconds in between requests
+# interval = 60
+# 
+# 
+# format =  <label>
+# label = %notifications%
+# 
+# 
+# format-offline =  <label-offline>
+# label-offline = offline
 
 
 # foldend
@@ -377,7 +379,6 @@ interval = 10
 format  = <label>
 label   =  %output%
 
-
 [module/updates]
 type = custom/script
 
@@ -428,8 +429,15 @@ exec = polybar-msg hook trash 1
 interval = 60
 label =
 
+[module/github]
+type = custom/script
+exec = ~/.config/polybar/modules/github-notifications.sh
+interval = 60           
+format =  <label>
+label = %output%
 
 # foldend
+
 
 # vim:ft=dosini
 # vim:foldmarker=foldstart,foldend
