--- a/polybar/.config/polybar/modules.config
+++ b/polybar/.config/polybar/modules.config
@@ -230,7 +230,7 @@ ramp-volume-2 = 
 #bar-volume-empty          = ─
 #bar-volume-empty-font     = 1
 
-[module/pulseaudio]
+[module/volume]
 type = internal/pulseaudio
 
 format-volume = <ramp-volume> <label-volume>
@@ -244,6 +244,18 @@ ramp-volume-2 = 
 
 #format-volume-background   = ${colors.red}
 #format-muted-background    = ${colors.red}
+
+[module/pulseaudio-mic]
+type = internal/pulseaudio
+
+format-volume = <ramp-volume> <label-volume>
+label-muted   =   muted
+
+click-right = pavucontrol & disown
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 
 [module/temperature]
 type = internal/temperature
@@ -420,10 +432,11 @@ hook-0 = ~/.config/polybar/modules/trash.sh
 hook-1 = ~/.config/polybar/modules/trash.sh --clean &
 click-right = polybar-msg hook trash 2
 
+initial = 1
 format =  <output>
 
 
-[module/trash-interval]
+[module/trash-update]
 type = custom/script
 exec = polybar-msg hook trash 1
 interval = 60
@@ -435,6 +448,45 @@ exec = ~/.config/polybar/modules/github-notifications.sh
 interval = 60           
 format =  <label>
 label = %output%
+click-right = $BROWSER 
+
+
+# [module/microphone-update]
+# type = custom/script
+# interval = 1
+# format =  <label>
+# exec = ~/.config/polybar/modules/microphone.bash2 show-vol
+# 
+# ; Control actions (using pactl)
+# click-left = ~/.config/polybar/modules/microphone.bash22 mute-vol
+# scroll-up = ~/.config/polybar/modules/microphone.bash2 inc-vol 
+# scroll-down = ~/.config/polybar/modules/microphone.bash2 dec-vol 
+
+
+# This is stoopid and I love it :P
+[module/microphone]
+type = custom/ipc
+hook-0 = ~/.config/polybar/modules/microphone.bash show-vol
+hook-1 = ~/.config/polybar/modules/microphone.bash mute-vol
+hook-2 = ~/.config/polybar/modules/microphone.bash inc-vol 
+hook-3 = ~/.config/polybar/modules/microphone.bash dec-vol 
+
+initial = 1
+click-left = polybar-msg hook microphone 2
+scroll-up = polybar-msg hook microphone 3
+scroll-down = polybar-msg hook microphone 4
+
+format = <output>
+
+
+[module/microphone-update]
+type = custom/script
+exec = polybar-msg hook microphone 1
+interval = 60
+label = 
+
+
+
 
 # foldend
 
