Added right-click functionality to polybar modules

--- a/polybar/.config/polybar/modules.config
+++ b/polybar/.config/polybar/modules.config
@@ -245,18 +245,6 @@ ramp-volume-2 = 
 #format-volume-background   = ${colors.red}
 #format-muted-background    = ${colors.red}
 
-[module/pulseaudio-mic]
-type = internal/pulseaudio
-
-format-volume = <ramp-volume> <label-volume>
-label-muted   =   muted
-
-click-right = pavucontrol & disown
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-
 [module/temperature]
 type = internal/temperature
 
@@ -423,6 +411,7 @@ exec     = ~/.config/polybar/modules/noisetorch.sh
 interval = 60
 format  = <label>
 label   = %output%
+click-right = noisetorch
 
 
 # This is stoopid and I love it :P
@@ -448,7 +437,7 @@ exec = ~/.config/polybar/modules/github-notifications.sh
 interval = 60           
 format =  <label>
 label = %output%
-click-right = $BROWSER 
+click-right = $BROWSER https://github.com/notifications
 
 
 # [module/microphone-update]
@@ -473,6 +462,7 @@ hook-3 = ~/.config/polybar/modules/microphone.bash dec-vol
 
 initial = 1
 click-left = polybar-msg hook microphone 2
+click-right = pavucontrol & disown
 scroll-up = polybar-msg hook microphone 3
 scroll-down = polybar-msg hook microphone 4
 
