Small style changes for polybar

--- a/polybar/.config/polybar/modules.config
+++ b/polybar/.config/polybar/modules.config
@@ -408,8 +408,8 @@ initial = 1
 type = custom/script
 
 exec     = ~/.config/polybar/modules/noisetorch.sh
-interval = 60
-format  = <label>
+interval = 20
+format  =  <label>
 label   = %output%
 click-right = noisetorch
 
