--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -94,7 +94,7 @@ cursor-click = pointer
 fixed-center   = true 
 modules-left   = bspwm spotify
 modules-center = 
-modules-right  = noisetorch github updates trash trash-update microphone microphone-update volume ping network root-fs memory nvidia cpu date time 
+modules-right  = github updates trash trash-update noisetorch microphone microphone-update volume ping network root-fs memory nvidia cpu date time 
 
 #modules-right  = noisetorch github updates volume ping network root-fs memory nvidia cpu date time 
 # foldend
