Created arch-aur-updates script

--- a/polybar/.config/polybar/modules.config
+++ b/polybar/.config/polybar/modules.config
@@ -382,7 +382,7 @@ label   =  %output%
 [module/updates]
 type = custom/script
 
-exec     = ~/.config/polybar/modules/arch-aur-updates.sh 
+exec     = arch-aur-updates || ~/.config/polybar/modules/arch-aur-updates.sh 
 interval = 300
 #tail     = true
 format  =  <label>
