--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -2,3 +2,16 @@
 gtk-theme-name = phocus
 gtk-font-name  = NotoSans Nerd Font 10
 
+## Misterious settings
+gtk-menu-images = 1;
+gtk-xft-hinting = 1;
+gtk-xft-rgba = "rgb";
+gtk-application-prefer-dark-theme = 1;
+gtk-decoration-layout = ":";
+gtk-toolbar-style = "GTK_TOOLBAR_ICONS";
+gtk-toolbar-icon-size = "GTK_ICON_SIZE_LARGE_TOOLBAR";
+#gtk-enable-even-sounds = 0;
+gtk-enable-input-feedback-sounds = 0;
+gtk-button-images = 1;
+#ctk-cursor-theme-name = "capitaine-cursors-light";
+#gtk-cursor-theme-size = 0;
