Changed icon theme to Papirus

--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,5 +1,6 @@
 [Settings]
 gtk-theme-name = phocus
+gtk-icon-theme-name = Papirus
 gtk-font-name  = NotoSans Nerd Font 10
 
 ## Misterious settings
