--- a/polybar/.config/polybar/modules.config
+++ b/polybar/.config/polybar/modules.config
@@ -100,11 +100,12 @@ fuzzy-match    = false
 label-empty                  = 
 label-empty-font             = 6
 label-empty-padding          = 2
+label-empty-foreground     = ${colors.grey}
 
 label-focused                = 
 label-focused-font           = 5
 label-focused-padding        = 2
-label-focused-foreground     = ${colors.red}
+label-focused-foreground     = ${colors.foreground}
 
 # label-monocle                = 
 # label-monocle-font           = 2
@@ -154,6 +155,7 @@ label-focused-foreground     = ${colors.red}
 label-occupied               = 
 label-occupied-font          = 5
 label-occupied-padding       = 2
+label-occupied-foreground     = ${colors.grey}
 
 [module/cpu]
 type = internal/cpu
