Changed polybar's spotify module to use ipc

--- a/polybar/.config/polybar/modules.config
+++ b/polybar/.config/polybar/modules.config
@@ -107,10 +107,10 @@ label-focused-font           = 5
 label-focused-padding        = 2
 label-focused-foreground     = ${colors.foreground}
 
-# label-monocle                = 
-# label-monocle-font           = 2
-# label-monocle-padding        = 2
-# label-monocle-foreground     = ${colors.magenta}
+label-monocle                = 
+label-monocle-font           = 5
+label-monocle-padding        = 2
+label-monocle-foreground     = ${colors.magenta}
 # 
 # label-tiled                  = 
 # label-tiled-font             = 2
@@ -361,14 +361,31 @@ label    =  %output%
 #format-foreground = ${colors.foreground}
 ##format-background = ${colors.magenta}
 
+# [module/spotify]
+# type = custom/script
+# 
+# exec     = ~/.config/polybar/modules/spotify.sh 
+# interval = 5
+# #tail     = true
+# format  = <label>
+# label   =  %output%
+ 
+# This is stoopid and I love it :P
 [module/spotify]
-type = custom/script
+type = custom/ipc
+hook-0 = ~/.config/polybar/modules/spotify.sh 
+hook-1 = echo "paused" 
+click-right = polybar-msg hook spotify 2
 
-exec     = ~/.config/polybar/modules/spotify.sh 
+initial = 1
+format = <output>
+
+
+[module/spotify-update]
+type = custom/script
+exec = polybar-msg hook spotify 1
 interval = 5
-#tail     = true
-format  = <label>
-label   =  %output%
+label =
 
 #format-foreground = ${colors.foreground-alt}
 
