--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -94,7 +94,7 @@ cursor-click = pointer
 
 ### Modules ###
 fixed-center   = true 
-modules-left   = bspwm spotify
+modules-left   = bspwm spotify spotify-update
 modules-center = 
 modules-right  = github updates trash trash-update noisetorch microphone microphone-update volume ping network root-fs memory nvidia cpu date time 
 
