new picom config

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -12,7 +12,7 @@
 backend = "xrender";		# xrender seems faster than glx idk why
 glx-no-stencil = true;          # Performance increase
 glx-no-rebind-pixmap = true;	# was set to true to test
-#vsync = true
+vsync = true
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
