--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "DejaVu Sans Mono"
+    family: "DejaVuSansMono Nerd Font Mono"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
