--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -50,7 +50,7 @@ window:
     y: 22
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: true
+  dynamic_padding: false
 
   # Window decorations
   #
@@ -111,8 +111,13 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "DejaVuSansMono Nerd Font Mono"
+    # family: "DejaVuSansMono Nerd Font Mono"
+     family: "Codelia Nerd Font"
+    # family: "Iosevka Custom"
+    # family: "TerminessTTF Nerd Font"
+    #     family: "Terminus"
 
+  size: 15
     # The `style` can be specified to pick a specific face.
     #style: Regular
 
@@ -150,14 +155,14 @@ font:
     #style: Bold Italic
 
   # Point size
-  #size: 11.0
+  size: 15
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
-  #offset:
-  #  x: 0
-  #  y: 0
+  #  offset:
+  #    x: 1
+    #y: 1
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the
@@ -175,7 +180,7 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Tomorrow Night)
+# Colors 
 colors:
   # Default colors
   primary:
