--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -12,7 +12,7 @@
 backend = "xrender";		# xrender seems faster than glx idk why
 glx-no-stencil = true;          # Performance increase
 glx-no-rebind-pixmap = true;	# was set to true to test
-#vsync = true
+vsync = false
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
 # Reported to have no effect, though.
@@ -80,15 +80,6 @@ refresh-rate = 0;
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
-
-
-
-
-
-
-
-
-
 
 wintypes : 
 {
