vscode breadcrumbs hjkl

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -99,5 +99,5 @@
         //"hint",
         //"warning"
     ],
-    "errorLens.gutterIconsEnabled": true,
+    //"errorLens.gutterIconsEnabled": true,
 }
