--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -83,9 +83,9 @@ invert-color-include = [ ];
 
 wintypes : 
 {
-  dock: {
-    shadow = false;
-  }
+#  dock: {
+#    shadow = false;
+#  }
 #   tooltip : 
 #   {
 #     fade = true;
