--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -8,7 +8,8 @@
 # title=foot
 # locked-title=no
 
-font=JetBrainsMono Nerd Font Mono:size=8
+#font=JetBrainsMono Nerd Font Mono:size=8
+font=JetBrainsMono Nerd Font Mono:size=10
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
