feat: switch to gruvbox for 2025

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -86,33 +86,67 @@ flash=ffcc00         # Optional; set to a custom flash color (yellow)
 flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
-regular0=181818  # black
-regular1=ac4242  # red
-regular2=90a959  # green
-regular3=f4bf75  # yellow
-regular4=6a9fb5  # blue
-regular5=aa759f  # magenta
-regular6=75b5aa  # cyan
-regular7=d8d8d8  # white
+#regular0=181818  # black
+#regular1=ac4242  # red
+#regular2=90a959  # green
+#regular3=f4bf75  # yellow
+#regular4=6a9fb5  # blue
+#regular5=aa759f  # magenta
+#regular6=75b5aa  # cyan
+#regular7=d8d8d8  # white
+#
+### Bright colors (color palette 8-15)
+#bright0=6b6b6b   # bright black
+#bright1=c55555   # bright red
+#bright2=aac474   # bright green
+#bright3=feca88   # bright yellow
+#bright4=82b8c8   # bright blue
+#bright5=c28cb8   # bright magenta
+#bright6=93d3c3   # bright cyan
+#bright7=f8f8f8   # bright white
+#
+### Dimmed colors (color palette dim0-dim7)
+#dim0=0f0f0f   # dim black
+#dim1=712b2b   # dim red
+#dim2=5f6f3a   # dim green
+#dim3=a17e4d   # dim yellow
+#dim4=456877   # dim blue
+#dim5=704d68   # dim magenta
+#dim6=4d7770   # dim cyan
+#dim7=8e8e8e   # dim white
 
-## Bright colors (color palette 8-15)
-bright0=6b6b6b   # bright black
-bright1=c55555   # bright red
-bright2=aac474   # bright green
-bright3=feca88   # bright yellow
-bright4=82b8c8   # bright blue
-bright5=c28cb8   # bright magenta
-bright6=93d3c3   # bright cyan
-bright7=f8f8f8   # bright white
+# Gruvbox
+[colors]
+# Base colors
+background=282828
+foreground=ebdbb2
 
-## Dimmed colors (color palette dim0-dim7)
-dim0=0f0f0f   # dim black
-dim1=712b2b   # dim red
-dim2=5f6f3a   # dim green
-dim3=a17e4d   # dim yellow
-dim4=456877   # dim blue
-dim5=704d68   # dim magenta
-dim6=4d7770   # dim cyan
-dim7=8e8e8e   # dim white
+# Regular colors (0-7)
+regular0=32302f    # black (slightly lighter than background)
+regular1=ea6962    # red
+regular2=a9b665    # green
+regular3=d8a657    # yellow
+regular4=7daea3    # blue
+regular5=d3869b    # magenta
+regular6=89b482    # cyan
+regular7=d5c4a1    # white
 
+# Bright colors (8-15)
+bright0=928374     # bright black
+bright1=fb4934     # bright red
+bright2=b8bb26     # bright green
+bright3=fabd2f     # bright yellow
+bright4=83a598     # bright blue
+bright5=d3869b     # bright magenta
+bright6=8ec07c     # bright cyan
+bright7=ebdbb2     # bright white
 
+# Dim colors (calculated at ~65% brightness)
+dim0=1d2021        # dim black
+dim1=c14a4a        # dim red
+dim2=6f7742        # dim green
+dim3=a17e4d        # dim yellow
+dim4=4f7276        # dim blue
+dim5=9c6377        # dim magenta
+dim6=577459        # dim cyan
+dim7=a89984        # dim white
