--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,6 +14,7 @@ setw -g aggressive-resize on
 #set -g terminal-overrides ',xterm-256color:Tc'
 #set -as terminal-overrides ',xterm*:sitm=\E[3m'
 set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-256color"
 set -ag terminal-overrides ",xterm-256color:Tc"
 
 
@@ -164,11 +165,13 @@ set -g set-clipboard external
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+#set -g @plugin 'catppuccin/tmux'
+#set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+set -g @plugin 'z3z1ma/tmux-gruvbox'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 #set -g @continuum-restore 'on'
+
 
 # Set background for the status bar
 #set -g @catppuccin_window_right_separator "#[fg=#313244,bg=#181825]█ "
@@ -176,38 +179,45 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 #set -g @catppuccin_status_left_separator "#[bg=#181825] █" 
 #set -g @catppuccin_window_current_fill "number"
 
-set -g @catppuccin_window_right_separator "█"
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_left_separator "█" 
-set -g @catppuccin_window_current_fill "number"
+set -g @gruvbox_window_right_separator "█"
+set -g @gruvbox_status_left_separator "█"
+set -g @gruvbox_status_left_separator "█" 
+set -g @gruvbox_window_current_fill "number"
 
-set -g @catppuccin_status_modules_right "session user host"
+set -g @gruvbox_status_modules_right "session user host"
 #set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @catppuccin_window_current_text "#W" 
-set -g @catppuccin_window_default_text "#W" 
+set -g @gruvbox_window_current_text "#W" 
+set -g @gruvbox_window_default_text "#W" 
 
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_status_left_separator_inverse "no"
-set -g @catppuccin_status_fill "all"
+set -g @gruvbox_window_current_text "#W"
+set -g @gruvbox_status_left_separator_inverse "no"
+set -g @gruvbox_status_fill "all"
 
 # Set colors for the session selector
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run  '~/.config/tmux/plugins/tpm/tpm'
 
-set -g pane-border-style fg="#313244"
-set -g pane-active-border fg="#313244"
-set -g status-bg "#181825"
+#set -g pane-border-style fg="#313244"
+#set -g pane-active-border fg="#313244"
+#set -g status-bg "#181825"
+
+# Gruvbox
+set -g pane-border-style fg="#3c3836"        # Gruvbox dark1
+set -g pane-active-border fg="#3c3836"       # Gruvbox dark1
+set -g status-bg "#1d2021"                   # Gruvbox dark0_hard
+
+
 #set -g mode-style "fg=black,bg=#f4b8e4"
 
-# Highlight panes on focus (only when there's more than 1)
-set-hook -g after-select-pane "if-shell -F '#{==:#{window_panes},1}' '' 'selectp -P bg=#252536; run \"sleep 0.1\"; selectp -P bg=default'"
+# For the pane highlight on focus (used in the if-shell command)
+set-hook -g after-select-pane "if-shell -F '#{==:#{window_panes},1}' '' 'selectp -P bg=#32302f; run \"sleep 0.1\"; selectp -P bg=default'"
+
+# Style command prompt / dialogs 
+set -g message-style 'bg=#282828 fg=default' # Gruvbox dark0_hard
 
 # Change color of selected text 
 set -g mode-style "reverse"
-
-# Style command prompt / dialogs 
-set -g message-style 'bg=#181825 fg=default'
 
 #if-shell "[[ $(tmux list-panes | wc -l) -gt 1 ]]" \
 #  'set-hook -g pane-focus-in "selectp -P bg=#252536; run \"sleep 0.1\"; selectp -P bg=default"'
