chore(foot): darker black

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -122,7 +122,7 @@ background=282828
 foreground=ebdbb2
 
 # Regular colors (0-7)
-regular0=32302f    # black (slightly lighter than background)
+regular0=1d2021    # black (slightly lighter than background)
 regular1=ea6962    # red
 regular2=a9b665    # green
 regular3=d8a657    # yellow
