feat: small changes in nvim

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -76,14 +76,7 @@ pad=3x3
 [touch]
 # long-press-delay=400
 
-[colors]
 # Alpha level (opacity), set to 1.0 for fully opaque.
-alpha=1.0
-background=181818    # Alacritty's background color (#181818)
-background=1e1e2e
-foreground=d8d8d8    # Alacritty's foreground color (#d8d8d8)
-flash=ffcc00         # Optional; set to a custom flash color (yellow)
-flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
 #regular0=181818  # black
@@ -119,7 +112,9 @@ flash-alpha=0.5
 [colors]
 # Base colors
 background=282828
-foreground=ebdbb2
+
+# prompt text
+foreground=ebdbb2 
 
 # Regular colors (0-7)
 regular0=1d2021    # black (slightly lighter than background)
