niri stuff mostly, some vim

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -49,7 +49,7 @@ pad=3x3
 # command-focused=no
 
 [scrollback]
-# lines=1000
+lines=50000
 # multiplier=3.0
 # indicator-position=relative
 # indicator-format=""
