--- a/kanshi/.config/kanshi/config
+++ b/kanshi/.config/kanshi/config
@@ -6,6 +6,19 @@ profile home-desk {
   exec "pkill eww; eww open-many win0 win1 win2"
 }
 
+profile home-desk-two {
+  exec "niri msg output 'eDP-1' off"
+  output "Lenovo Group Limited LEN P27q-10 0x01010101" mode 2560x1440 position 1920,0 scale 1.5 
+  output "Samsung Electric Company S27E390 0x30343939" mode 1920x1080 position 0,0 scale 1
+  exec "pkill eww; eww open-many win0 win1 win2"
+}
+
+profile standalone {
+  exec "niri msg output 'eDP-1' on"
+  output "BOE 0x09DE Unknown" mode 1920x1080 position 0,0 scale 1
+  exec "pkill eww; eww open-many win0"
+}
+
 profile work {
   exec "niri msg output 'eDP-1' off"
   output "Samsung Electric Company LS27A600N HNMX400145" mode 2560x1440 position 108,0 scale 1.5
@@ -22,8 +35,3 @@ profile work-bjorn {
 
 
 
-profile standalone {
-  exec "niri msg output 'eDP-1' on"
-  output "BOE 0x09DE Unknown" mode 1920x1080 position 0,0 scale 1
-  exec "pkill eww; eww open-many win0"
-}
